deal with dependency nightmare. thanks taliban: https://github.com/inetaf/tcpproxy/issues/39

--- a/test.yaml
+++ b/test.yaml
@@ -6,15 +6,15 @@ input:
 pipeline:
   processors:
     - python:
-        home: /Users/dv/src/gogopython/venv
+        home: /home/dv/src/gogopython/venv
         paths:
-          - "/opt/homebrew/Cellar/python@3.12/3.12.4/Frameworks/Python.framework/Versions/3.12/lib/python3.12"
-          - "/opt/homebrew/Cellar/python@3.12/3.12.4/Frameworks/Python.framework/Versions/3.12/lib/python3.12/lib-dynload"
-          - "/Users/dv/src/gogopython/venv/lib/python3.12/site-packages"
+          - /usr/lib64/python3.12
+          - /usr/lib64/python3.12/lib-dynload
+          - /src/gogopython/venv/lib64/python3.12/site-packages
+          - /src/gogopython/venv/lib/python3.12/site-packages
         script: |
-          import pandas as pd
-          s = pd.Series(range(1, 10))
-          print(s.apply(lambda x: x * x))
+          import time
+          print(f"the time is now {time.ctime()}")
 
 output:
   stdout: {}
