--- a/examples/requests.yaml
+++ b/examples/requests.yaml
@@ -21,12 +21,15 @@ pipeline:
             msg = json.loads(data)["title"]
           except:
             msg = "nothing :("
-          root["msg"] = f"You said: '{msg}'"
-          root["at"] = time.ctime()
+          root.msg = f"You said: '{msg}'"
+          root.at = time.ctime()
           try:
-            root["ip"] = requests.get("https://api.ipify.org").text
+            root.ip = requests.get("https://api.ipify.org").text
           except:
-            root["ip"] = "no internet?"
+            root.ip = "no internet?"
 
 output:
   stdout: {}
+
+logger:
+  level: OFF
