Add ability to assign metadata values.
Exposes a dict called "meta" that can be updated to write metadata
on a message.

--- a/examples/metadata.yaml
+++ b/examples/metadata.yaml
@@ -12,6 +12,10 @@ pipeline:
         script: |
           root.all = metadata()
           root.path = metadata("path")
+          meta["junk"] = {"message": "Hello World"}
+          meta["name"] = "dave"
+    - mapping: |
+        root.metadata = metadata()
 
 output:
   stdout: {}
