--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,5 +33,8 @@ jobs:
     - name: Run Python unit tests
       run: python -m unittest discover -v -s processor --pattern "*_test.py"
 
-    - name: Run integration test
+    - name: Run Connect unit test
       run: ./rp-connect-python test test.yaml
+
+    - name: Run integration test
+      run: ./rp-connect-python run examples/pickle.yaml
