Fix starting and stopping the main Python interpreter.
Previous fix to remove the deadlock when stopping the main
interpreter introduced issues starting it up again. This fixes up
some of the logic to remove bugs in state tracking and (hopefully)
squash the last race conditions.

--- a/examples/pickle.yaml
+++ b/examples/pickle.yaml
@@ -1,6 +1,7 @@
 input:
   python:
     name: pickle_the_time
+    pickle: true
     script: |
       def pickle_the_time(state = {}):
         import pickle
@@ -15,8 +16,7 @@ input:
       
         d = {"now": now, "cnt": cnt}
         state.update({"cnt": cnt + 1})
-
-        return pickle.dumps(d)
+        return d
 
 pipeline:
   processors:
