Introduce batch support for input.

--- a/examples/pickle.yaml
+++ b/examples/pickle.yaml
@@ -2,6 +2,7 @@ input:
   python:
     name: pickle_the_time
     pickle: true
+    batch_size: 5
     script: |
       def pickle_the_time(state = {}):
         import pickle
