Disable http server in input examples.

--- a/examples/input/input-function.yaml
+++ b/examples/input/input-function.yaml
@@ -12,7 +12,11 @@ input:
           return cnt
         else:
           return None
+
 output:
   stdout: {}
+
 logger:
   level: OFF
+http:
+  enabled: false
