--- a/examples/pandas.yaml
+++ b/examples/pandas.yaml
@@ -13,7 +13,7 @@ pipeline:
         mode: single
         script: |
           import pickle
-          df = pickle.loads(content())
+          df = unpickle()
           root = df.to_dict("list")
 
 output:
@@ -21,3 +21,5 @@ output:
 
 logger:
   level: OFF
+http:
+  enabled: false
