Redesign runtime modes.
Rename to be more accurate and default to the new "global",
formerly known as "single".

This is prep work for a redesign of how to handle large Python
objects without serialization between stages.

--- a/benchmark/python_reverse.yaml
+++ b/benchmark/python_reverse.yaml
@@ -1,7 +1,7 @@
 processor_resources:
   - label: reverse
     python:
-      mode: multi
+      mode: isolated
       script: |
         this = content().decode()
         root.text = this[::-1]
