--- a/test.yaml
+++ b/test.yaml
@@ -16,6 +16,7 @@ pipeline:
     - python:
         mode: isolated
         script: |
+          print("HERE")
           # Return a lowercase version.
           msg = content().decode()
           root = msg.lower()
